--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 		<meta charset="utf-8">
 
-		<title>particles.js</title>
+		<title>Personal Website</title>
 
 		<meta name="description" content="Website pessoal.">
 		<meta name="author" content="Thomas Ricardo Reinke" />
