--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" media="screen" href="css/style.css">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
+		<script src="https://kit.fontawesome.com/2a16ac0778.js" crossorigin="anonymous"></script>
 
 	</head>
 
@@ -23,43 +24,32 @@
 
 			<div class="card">
 
-			<div class="about-me">
-
-				<h1>THOMAS R. REINKE</h1>
-
-				<h3>ESTUDANTE - DESENVOLVEDOR WEB</h3>
-
-			</div>
-
-			<div class="white-line"></div>
-
-			<div class="item-holder">
-
-				<div class="item fs-60" id="gitHub">
-
-				<a href="https://github.com/thrnkk" target="_blank"><i class="devicon-github-plain"></i></a>
-
+				<div class="about-me">
+					<h1>THOMAS R. REINKE</h1>
+					<h3>ESTUDANTE - DESENVOLVEDOR WEB</h3>
 				</div>
 
-				<div class="item fs-50" id="linkedIn">
+				<div class="white-line"></div>
 
-				<a href="https://www.linkedin.com/in/thomas-r-reinke/" target="_blank"><i class="devicon-linkedin-plain"></i></a>
+				<div class="item-holder">
+
+					<div class="item fs-60" id="gitHub">
+						<a href="https://github.com/thrnkk" target="_blank"><i class="devicon-github-plain"></i></a>
+					</div>
+
+					<div class="item fs-50" id="linkedIn">
+						<a href="https://www.linkedin.com/in/thomas-r-reinke/" target="_blank"><i class="devicon-linkedin-plain"></i></a>
+					</div>
+
+					<div class="item fs-50" id="hackerrank">
+						<a href="https://www.hackerrank.com/thrnkk" target="_blank" style="padding-bottom: 5px;"><i class="fab fa-hackerrank"></i></a>
+					</div>
+
+					<div class="item fs-60" id="docker">
+						<a href="https://hub.docker.com/u/thrnkk" target="_blank"><i class="devicon-docker-plain"></i></a>
+					</div>
 
 				</div>
-
-				<div class="item fs-50" id="twitter">
-
-				<a href="https://twitter.com/thrnkk" target="_blank"><i class="devicon-twitter-plain"></i></a>
-
-				</div>
-
-				<div class="item fs-60" id="docker">
-
-				<a href="https://hub.docker.com/u/thrnkk" target="_blank"><i class="devicon-docker-plain"></i></a>
-
-				</div>
-
-			</div>
 
 			</div>
 
