--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
 			<div class="card">
 
+				<img src="./img/me.png">
+
 				<div class="about-me">
 					<h1>THOMAS R. REINKE</h1>
 					<h3>ESTUDANTE - DESENVOLVEDOR WEB</h3>
