--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 			<div class="card">
 
-				<img src="./img/me.png">
+				<img src="https://raw.githubusercontent.com/thrnkk/website/master/img/me.png">
 
 				<div class="about-me">
 					<h1>THOMAS R. REINKE</h1>
