--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		<meta name="author" content="Thomas Ricardo Reinke" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
+		<link rel="shortcut icon" href="https://raw.githubusercontent.com/thrnkk/website/master/img/me.ico" />
+		
 		<link rel="stylesheet" media="screen" href="css/style.css">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
