--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					</div>
 
 					<div class="item fs-50" id="linkedIn">
-						<a href="https://www.linkedin.com/in/thomas-r-reinke/" target="_blank"><i class="devicon-linkedin-plain"></i></a>
+						<a href="https://www.linkedin.com/in/thrnkk/" target="_blank"><i class="devicon-linkedin-plain"></i></a>
 					</div>
 
 					<div class="item fs-50" id="hackerrank">
