--- a/index.html
+++ b/index.html
@@ -11,66 +11,43 @@
 		<meta name="author" content="Thomas Ricardo Reinke" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<link rel="shortcut icon" href="https://raw.githubusercontent.com/thrnkk/website/master/img/me.ico" />
-		
-		<link rel="stylesheet" media="screen" href="css/style.css">
-		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
-		<script src="https://kit.fontawesome.com/2a16ac0778.js" crossorigin="anonymous"></script>
+		<link rel="shortcut icon" href="https://raw.githubusercontent.com/thrnkk/website/master/img/me.ico" />
+		<link rel="stylesheet" media="screen" href="./styles.css">
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="./script.js"></script>
 
 	</head>
 
 	<body>
 
-		<div id="particles-js">
+		<div class="container">
+			<div class="text" >
+				<h1 id="glitch">Thomas Ricardo Reinke</h1> 
+			</div>
+			<div class="text">
+				<h6>ESTUDANTE - DESENVOLVEDOR WEB</h6>
+			</div>
+		</div>
 
-			<div class="card">
+		<div class="social-holder">
 
-				<svg xmlns="http://www.w3.org/2000/svg" version="1.0" viewBox="0 0 371.000000 388.000000" preserveAspectRatio="xMidYMid meet">
-					<g transform="translate(0.000000,388.000000) scale(0.100000,-0.100000)" fill="#FFFFFF" stroke="none">
-						<path d="M1956 3840 c-14 -22 -26 -43 -26 -48 0 -4 -13 -18 -29 -30 -16 -11 -59 -69 -95 -127 -126 -202 -271 -364 -426 -473 -82 -58 -84 -57 -94 24 -8 65 -59 229 -97 311 -16 35 -29 67 -29 71 0 5 -13 29 -30 55 -26 41 -34 47 -64 47 -18 0 -39 -6 -45 -14 -7 -8 -27 -90 -46 -183 -73 -369 -137 -558 -308 -919 -160 -337 -159 -336 -171 -296 -3 9 -13 69 -21 132 -16 122 -31 154 -63 134 -32 -20 -55 -111 -56 -219 -1 -55 3 -112 7 -127 8 -24 6 -28 -20 -33 -108 -24 -211 -86 -237 -144 -35 -76 -3 -114 57 -68 35 26 96 50 161 61 35 7 38 6 31 -11 -23 -52 -56 -183 -65 -255 -5 -46 -10 -175 -10 -288 0 -194 1 -208 20 -228 12 -12 25 -22 29 -22 5 0 14 -42 20 -92 22 -172 100 -359 211 -506 94 -125 249 -251 357 -292 65 -24 225 -60 268 -60 24 0 35 -7 45 -25 15 -28 90 -67 163 -86 31 -7 98 -10 200 -6 126 4 165 9 227 30 117 39 272 103 369 151 231 117 429 342 522 596 23 62 24 76 24 325 0 244 -2 268 -27 396 -31 153 -50 212 -100 316 l-34 73 29 27 c30 29 151 215 211 324 54 98 87 210 96 324 5 55 18 134 30 175 32 107 37 272 15 436 -17 127 -56 277 -75 289 -6 3 -10 17 -10 31 0 31 -24 41 -56 23 -41 -22 -67 -53 -125 -150 -43 -73 -69 -103 -129 -152 -41 -34 -115 -97 -165 -140 -86 -76 -135 -111 -235 -169 l-45 -26 0 327 c-1 307 -2 331 -24 416 -28 111 -42 135 -80 135 -22 0 -34 -9 -55 -40z m-335 -1645 c270 -34 490 -97 607 -173 35 -22 76 -47 92 -53 31 -14 64 -65 111 -170 80 -184 126 -616 83 -783 -37 -142 -151 -313 -282 -422 -127 -106 -471 -249 -625 -261 -44 -3 -116 1 -184 11 -125 18 -154 15 -183 -21 l-19 -25 -43 30 c-24 16 -86 51 -138 78 -163 83 -311 242 -401 429 -62 129 -78 191 -91 355 -18 234 -22 213 141 625 151 381 181 403 542 404 152 1 239 -5 390 -24z"/>
-						<path d="M1290 2022 c0 -24 45 -64 114 -100 44 -23 63 -27 139 -27 81 0 90 2 108 24 25 30 24 37 -6 66 -20 21 -34 25 -82 26 -32 0 -80 4 -108 10 -27 5 -76 12 -107 15 -54 6 -58 5 -58 -14z"/>
-						<path d="M1506 1732 c-2 -4 -12 -66 -21 -137 -9 -72 -21 -154 -26 -183 -13 -66 -6 -99 26 -114 39 -18 72 -2 97 45 42 81 34 286 -14 365 -18 30 -50 42 -62 24z"/>
-						<path d="M1230 765 c0 -94 73 -222 157 -275 87 -55 215 -77 261 -44 30 21 30 73 -1 102 -12 12 -54 31 -92 43 -102 31 -147 60 -215 144 -46 56 -67 75 -86 75 -22 0 -24 -4 -24 -45z"/>
-						<path d="M3181 2340 c-136 -49 -231 -148 -205 -214 7 -17 54 -23 54 -6 0 17 85 59 153 75 82 19 117 14 216 -31 88 -41 114 -42 147 -8 49 48 13 111 -95 167 -64 33 -80 37 -144 37 -45 -1 -92 -8 -126 -20z"/>
-						<path d="M3192 1718 c-14 -18 -29 -82 -37 -158 -4 -36 -20 -110 -36 -166 -30 -102 -30 -128 0 -151 83 -65 181 111 161 289 -11 92 -28 168 -42 185 -13 16 -33 17 -46 1z"/>
-					</g>
-				</svg>
+			<div class="item fs-60" id="gitHub">
+				<a href="https://github.com/thrnkk" target="_blank"><i class="devicon-github-plain"></i></a>
+			</div>
 
-				<div class="about-me">
-					<h1>THOMAS R. REINKE</h1>
-					<h3>ESTUDANTE - DESENVOLVEDOR WEB</h3>
-				</div>
+			<div class="item fs-50" id="linkedIn">
+				<a href="https://www.linkedin.com/in/thrnkk/" target="_blank"><i class="devicon-linkedin-plain"></i></a>
+			</div>
 
-				<div class="white-line"></div>
-
-				<div class="item-holder">
-
-					<div class="item fs-60" id="gitHub">
-						<a href="https://github.com/thrnkk" target="_blank"><i class="devicon-github-plain"></i></a>
-					</div>
-
-					<div class="item fs-50" id="linkedIn">
-						<a href="https://www.linkedin.com/in/thrnkk/" target="_blank"><i class="devicon-linkedin-plain"></i></a>
-					</div>
-
-					<div class="item fs-50" id="hackerrank">
-						<a href="https://www.hackerrank.com/thrnkk" target="_blank" style="padding-bottom: 5px;"><i class="fab fa-hackerrank"></i></a>
-					</div>
-
-					<div class="item fs-60" id="docker">
-						<a href="https://hub.docker.com/u/thrnkk" target="_blank"><i class="devicon-docker-plain"></i></a>
-					</div>
-
-				</div>
-
+			<div class="item fs-60" id="docker">
+				<a href="https://hub.docker.com/u/thrnkk" target="_blank"><i class="devicon-docker-plain"></i></a>
 			</div>
 
 		</div>
-
-		<script src="./particles.js"></script>
-		<script src="./js/app.js"></script>
-
+		
+		
 	</body>
 
 </html>
