changed to 20% change and changed css

--- a/index.html
+++ b/index.html
@@ -23,25 +23,27 @@
 	<body>
 
 		<div class="container">
-			<div class="text" >
-				<h1 id="glitch">Thomas Ricardo Reinke</h1> 
+			<div class="text skew">
+				<h1 id="glitch">
+					Thomas Ricardo Reinke
+				</h1> 
 			</div>
 			<div class="text">
-				<h6>ESTUDANTE - DESENVOLVEDOR WEB</h6>
+				<h4>ESTUDANTE - DESENVOLVEDOR WEB</h4>
 			</div>
 		</div>
 
 		<div class="social-holder">
 
-			<div class="item fs-60" id="gitHub">
+			<div class="item fs-60">
 				<a href="https://github.com/thrnkk" target="_blank"><i class="devicon-github-plain"></i></a>
 			</div>
 
-			<div class="item fs-50" id="linkedIn">
+			<div class="item fs-50">
 				<a href="https://www.linkedin.com/in/thrnkk/" target="_blank"><i class="devicon-linkedin-plain"></i></a>
 			</div>
 
-			<div class="item fs-60" id="docker">
+			<div class="item fs-60">
 				<a href="https://hub.docker.com/u/thrnkk" target="_blank"><i class="devicon-docker-plain"></i></a>
 			</div>
 
