--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				</h1> 
 			</div>
 			<div class="text">
-				<h4>ESTUDANTE - DESENVOLVEDOR WEB</h4>
+				<h4>ALWAYS LEARNING - FULLSTACK</h4>
 			</div>
 		</div>
 
